--- a/config.yaml
+++ b/config.yaml
@@ -12,35 +12,36 @@
 # This option supports custom types so lessons can be branded
 # and themed with your own logo and alt-text (see `carpentry_description`)
 # See https://carpentries.github.io/sandpaper-docs/editing.html#adding-a-custom-logo
-carpentry: 'incubator'
+carpentry: 'step-up'
 
 # Alt-text description of the lesson.
-carpentry_description: 'Lesson Description'
+carpentry_description: 'A short-format training session providing an introduction to git
+and GitHub for technicians.'
 
 # Overall title for pages.
-title: 'Lesson Title' # FIXME
+title: 'Introduction to git and GitHub for technicans' # FIXME
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: ~ # FIXME
+created: 2026-01-15 
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries' # FIXME
+keywords: 'git, GitHub, software, bytesized, technicians' 
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha' # FIXME
+life_cycle: 'pre-alpha'
 
 # License of the lesson
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-md' # FIXME
+source: 'https://github.com/jcohen02/git-and-github-for-technicians'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org' # FIXME
+contact: 'jeremy@rslondon.ac.uk'
 
 # Navigation ------------------------------------------------
 #
@@ -66,7 +67,8 @@ contact: 'team@carpentries.org' # FIXME
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.md
+- introduction-to-git.md
+- get-started-with-git.md
 
 # Information for Learners
 learners: 
@@ -81,5 +83,5 @@ profiles:
 #
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
-
+varnish: jcohen02/carpentries-varnish
 
